--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "test": "jest"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -28,4 +29,6 @@
     "jest": "^29.7.0",
     "vite": "^5.4.10"
   }
+
+  
 }
